@@ -21,6 +21,7 @@
 # it's not predictable when it will be written out.
 
 import os
+import stat
 import fnmatch
         
 import bzrlib.tree
@@ -118,6 +119,15 @@ class WorkingTree(bzrlib.tree.Tree):
     def get_file_sha1(self, file_id):
         path = self._inventory.id2path(file_id)
         return self._hashcache.get_sha1(path)
+
+
+    def is_executable(self, file_id):
+        if os.name == "nt":
+            return self._inventory[file_id].executable
+        else:
+            path = self._inventory.id2path(file_id)
+            mode = os.lstat(self.abspath(path)).st_mode
+            return bool(stat.S_ISREG(mode) and stat.S_IEXEC&mode)
 
     def get_symlink_target(self, file_id):
         return os.readlink(self.id2path(file_id))
